non breaking spaces in modals

--- a/kids/index.html
+++ b/kids/index.html
@@ -299,35 +299,35 @@
 			<div id="loading" class="modal">
 				<h2>Chargement en cours...</h2>
 				<p><img src="img/tinified/loading.apng"></p>
-				<p>Merci de patienter pendant le chargement des grilles !</p>
+				<p>Merci de patienter pendant le chargement des grilles.</p>
 			</div>
 			<div id="panic" class="modal closed">
-				<h2>Une erreur est survenue !</h2>
+				<h2>Une erreur est survenue&nbsp;!</h2>
 				<p>Impossible de charger les grilles, veuillez réessayer plus tard.</p>
 			</div>
 			<div id="welcome" class="modal closed">
-				<h2><span class="red">B</span><span class="yellow">i</span><span class="green">e</span><span class="pink">n</span><span class="blue">v</span><span class="red">e</span><span class="yellow">n</span><span class="green">u</span><span class="pink">e</span> <span class="blue">à</span> <span class="red">M</span><span class="yellow">o</span><span class="green">k</span><span class="pink">o</span><span class="blue">l</span><span class="red">é</span> <span class="yellow">!</span></h2>
+				<h2><span class="red">B</span><span class="yellow">i</span><span class="green">e</span><span class="pink">n</span><span class="blue">v</span><span class="red">e</span><span class="yellow">n</span><span class="green">u</span><span class="pink">e</span> <span class="blue">à</span> <span class="red">M</span><span class="yellow">o</span><span class="green">k</span><span class="pink">o</span><span class="blue">l</span><span class="red">é</span>&nbsp;<span class="yellow">!</span></h2>
 				<p>Tu dois deviner tous les mots de la grille en associant une lettre à chaque couleur.</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour commencer.</p>
-				<p>Bonne chance !</p>
+				<p>Bonne chance&nbsp;!</p>
 			</div>
 			<div id="ace-score" class="modal closed">
-				<h2><span class="red">E</span><span class="yellow">x</span><span class="green">c</span><span class="pink">e</span><span class="blue">l</span><span class="red">l</span><span class="yellow">e</span><span class="green">n</span><span class="pink">t</span> <span class="blue">!</span></h2>
-				<p>Tu as compléter la grille sans faire aucune erreur !</p>
+				<h2><span class="red">E</span><span class="yellow">x</span><span class="green">c</span><span class="pink">e</span><span class="blue">l</span><span class="red">l</span><span class="yellow">e</span><span class="green">n</span><span class="pink">t</span>&nbsp;<span class="blue">!</span></h2>
+				<p>Tu as compléter toute la grille sans te tromper&nbsp;!</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>
 			</div>
 			<div id="champion-score" class="modal closed">
-				<h2><span class="red">B</span><span class="yellow">r</span><span class="green">a</span><span class="pink">v</span><span class="blue">o</span> <span class="red">!</h2>
-				<p>Tu as fait moins de 5 erreurs, c'est très bien !</p>
+				<h2><span class="red">B</span><span class="yellow">r</span><span class="green">a</span><span class="pink">v</span><span class="blue">o</span>&nbsp;<span class="red">!</h2>
+				<p>Tu as fait moins de 5 erreurs, c'est très bien&nbsp;!</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>				
 			</div>
 			<div id="average-score" class="modal closed">
-				<h2><span class="red">P</span><span class="yellow">a</span><span class="green">r</span><span class="pink">t</span><span class="blue">i</span><span class="red">e</span> <span class="yellow">t</span><span class="green">e</span><span class="pink">r</span><span class="blue">m</span><span class="red">i</span><span class="yellow">n</span><span class="green">é</span><span class="pink">e</span> <span class="blue">!</span></h2>
+				<h2><span class="red">P</span><span class="yellow">a</span><span class="green">r</span><span class="pink">t</span><span class="blue">i</span><span class="red">e</span> <span class="yellow">t</span><span class="green">e</span><span class="pink">r</span><span class="blue">m</span><span class="red">i</span><span class="yellow">n</span><span class="green">é</span><span class="pink">e</span>&nbsp;<span class="blue">!</span></h2>
 				<p>Tu as trouvé tous les mots en faisant quelques erreurs, continue tes efforts.</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>				
 			</div>
 			<div id="bad-score" class="modal closed">
-				<h2><span class="red">P</span><span class="yellow">a</span><span class="green">r</span><span class="pink">t</span><span class="blue">i</span><span class="red">e</span> <span class="yellow">t</span><span class="green">e</span><span class="pink">r</span><span class="blue">m</span><span class="red">i</span><span class="yellow">n</span><span class="green">é</span><span class="pink">e</span> <span class="blue">!</span></h2>
+				<h2><span class="red">P</span><span class="yellow">a</span><span class="green">r</span><span class="pink">t</span><span class="blue">i</span><span class="red">e</span> <span class="yellow">t</span><span class="green">e</span><span class="pink">r</span><span class="blue">m</span><span class="red">i</span><span class="yellow">n</span><span class="green">é</span><span class="pink">e</span>&nbsp;<span class="blue">!</span></h2>
 				<p>Oups, tu as fait beaucoup d'erreurs, essayes encore une fois.</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>
 			</div>
