Correction faute d'orthographe

--- a/kids/index.html
+++ b/kids/index.html
@@ -328,7 +328,7 @@
 			</div>
 			<div id="bad-score" class="modal closed">
 				<h2><span class="red">P</span><span class="yellow">a</span><span class="green">r</span><span class="pink">t</span><span class="blue">i</span><span class="red">e</span> <span class="yellow">t</span><span class="green">e</span><span class="pink">r</span><span class="blue">m</span><span class="red">i</span><span class="yellow">n</span><span class="green">é</span><span class="pink">e</span>&nbsp;<span class="blue">!</span></h2>
-				<p>Oups, tu as fait beaucoup d'erreurs, essayes encore une fois.</p>
+				<p>Oups, tu as fait beaucoup d'erreurs, essaye encore une fois.</p>
 				<p>Clique n'importe où, touche l'écran ou appuie sur une touche pour faire une autre partie.</p>
 			</div>
 			<div id="modal-overlay" class="overlay closed"></div>
