--- a/kids/index.html
+++ b/kids/index.html
@@ -189,6 +189,7 @@
 				opacity: 0.8;
 			    background-image: url(img/tinified/wood-bg-02.png);
 			    background-repeat: repeat;
+			    background-size: contain;			    
 		    }
 		    #puzzle {
 			    position: relative;
@@ -231,6 +232,7 @@
 			    position: absolute;
 			    background-image: url(img/tinified/wood-bg-03.png);
 			    background-repeat: repeat;
+			    background-size: contain;
 			    top: 64px;
 			    left: 50%;
 			    transform: translateX(-50%);
